--- a/api/functions/package.json
+++ b/api/functions/package.json
@@ -5,7 +5,8 @@
     "cors": "^2.8.1",
     "express": "^4.16.2",
     "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.2"
+    "firebase-functions": "^0.6.3",
+    "js-base64": "^2.4.0"
   },
   "private": true
 }
