--- a/web/package.json
+++ b/web/package.json
@@ -71,7 +71,8 @@
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "vuex": "^3.0.1"
   },
   "engines": {
     "node": ">= 8.2.1",
